--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "15.1.0",
+  "version": "15.1.0rb",
   "name": "react-native-svg",
   "description": "SVG library for react-native",
   "homepage": "https://github.com/react-native-community/react-native-svg",
